v0.7.1~dev
- Cleanup and avoid errors when adding artwork from files
- Check existing URLs for problems
- Retry failed items sooner than 2 months
- Prefer English over other non-matching languages on non-English systems
- Ignore some false alarm updates from Kodi that aren't new items

v0.7.0 (2016-10-03)
- Clean up series and artwork selection GUIs for Kodi 17 Krypton
- Drop extra dependencies CacheControl and lockfile, use common plugin cache
- Make more requests of TheTVDB to grab more fanart
- Fix non-working season landscape images (encode URLs from fanart.tv)
 - Includes a button to fix existing URLs manually

v0.6.4 (2016-09-18)
- Fix error in series selection for episode artwork

v0.6.3 (2016-09-13)
- Identify artwork with AD filenames
- Run full automatic process more often if filesystem only
- Add option to set minimum rating for auto processing
- Remove local artwork from library if file no longer exists
- Fix series banner sort
- Fix a few possible errors

v0.6.2 (2016-09-08)
- Fix persistent error after saved JSON is corrupted
- Improve list processing speed if web services aren't accessed
- Reduce load on web services during automatic processing
- Use proper paths for local file artwork
- Fix datetime errors

v0.6.1 (2016-07-22)
- Fix error when grabbing images from TheTVDB

v0.6.0 (2016-07-08)
- Add setting to enter a fanart.tv personal API key
- Use production API for TheTVDB API v2, rather than beta
- Load artwork from filesystem for stacked movies and VIDEO_TS/BDMV rips
- Localize messages

v0.5.0 (2016-03-04)
- Add artwork from NFO and image files
- Add option to prefer fanart with no title
- Multiple characterart can be selected
- Better web service handling

v0.4.0 (2016-02-15)
- Fix persistent notification being too persistent
- Add settings to select artwork types to automatically download
- Sort and limit posters by height, not width

v0.3.2 (2016-02-09)
- better handle rapid fire library updates
- Use persistent notification for progress